bug fixed for text-box and overflow issue

--- a/src/styles/utilities/_common.scss
+++ b/src/styles/utilities/_common.scss
@@ -34,6 +34,7 @@
 }
 .scroll-y {
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 .overflow-hidden {
   overflow: hidden;
